# test_cnarios_playwright

./: README.md  conftest.py  pyproject.toml  pytest.ini
config/: settings.py
data/Ecommerce_Product_Listing_and_Pagination/: __init__.py  desired_product.py  highest_rated_products.py  most_expensive_products.py
pages/: base_page.py
pages/Ecommerce_Product_Filtering/: __init__.py  filter_page.py
pages/Ecommerce_Product_Listing_and_Pagination/: __init__.py  products_page.py
pages/role_based_login_flow_page/: __init__.py  admin_dashboard_page.py  login_page.py  mixins.py  user_dashboard_page.py
tests/: test_1.md  test_1_role_based_login_flow_page.py  test_2.md  test_2_E-commerce_Product_Listing_and_Pagination.py  test_3.md  test_3_E-commerce_Product_Filtering.py
utils/allure/: __init__.py  attachments.py  operate.py
